Attempt fix for iPhone CSS bug; calendar row overlaps

--- a/public/css/master.css
+++ b/public/css/master.css
@@ -67,6 +67,9 @@ p {
     gap: 3px 3px;
     margin: 3px 0;
 }
+.cal-row-block {
+    display: block;
+}
 .cal-cell {
     background-color: rgba(0, 0, 0, 0.1);
     border-radius: 5px;
